# mcd-manager

./: LISENCE  READMD.md  mcdm.py  mcdm.yml  mcdr_manager.py  mcdreforged.plugin.json  mcdrm.yml  pyproject.toml
