[tool.poetry]
name = "mcd-manager"
version = "0.1.0"
description = ""
authors = ["notnotype"]
license = "MIT"
readme = "README.md"
packages = [{include = "mcd_manager"}]

[tool.poetry.dependencies]
python = "^3.11"
mcdreforged = "^2.10.2"
loguru = "^0.7.0"
pyyaml = "^6.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
